# dashboard-etl

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
etl/: __main__.py
etl/extract/: __init__.py  __main__.py  extract.py
etl/master_transform/: __init__.py  transform.py  transformer.py
etl/module_transform/: __init__.py  denormalize.py  transform.py
etl/transform/: __init__.py  denormalize.py
