[metadata]
name = dashboard-etl
version = 1.0.0
author = Abdullah Reza
author_email = air.reza@hotmail.com
url = https://github.com/rezaabdullah/dashboard-etl
description = ETL project for Google Data Studio Dashboard.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = etl, setuptools, data visualization, analytics, dashboard
license = Apache License 2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages = find:
install_requires =
    pandas == 1.4.1
    PyYAML >= 6.0
    typer

[options.entry_points]
console_scripts = 
    my-example-utility = example.example:main

[options.extras_require]
notebook = jupyter>=1.0.0, matplotlib
dev = 
    black==22.1.0
    flake8==4.0.1

[options.package_data]
example = data/schema.json, *.txt
* = README.md